# discord-bot-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-05-13-discord-relationship-bot.md
docs/superpowers/specs/: 2026-05-13-discord-relationship-bot-design.md  2026-05-15-hermes-inspired-overhaul-design.md
scripts/: dry_run_turn.py  show_state.py
src/bot/: __init__.py  config.py  main.py  models.py  runtime.py  safety.py
src/bot/agent/: __init__.py  minimax_client.py  prompt_builder.py  relationship_agent.py
src/bot/memory/: __init__.py  curator.py  store.py
src/bot/observability/: __init__.py  bot_logger.py
src/bot/scheduler/: __init__.py  proactive.py
tests/: test_agent.py  test_config.py  test_discord_adapter.py  test_main.py  test_memory.py  test_models_safety.py  test_proactive.py  test_runtime.py  test_scripts.py
